--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,5 @@ dependencies = [
     "tabula-py>=2.10.0",
 ]
 
-[tool.poetry]
-packages = [
-    { include = "src" }
-]
-
+[tool.uv]
+package = true
