--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "markitdown>=0.0.1a3",
     "pandera>=0.22.1",
+    "pytest>=8.3.4",
     "tabula-py>=2.10.0",
 ]
 
