--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "markitdown>=0.0.1a3",
     "pandera>=0.22.1",
     "pytest>=8.3.4",
+    "responses>=0.25.3",
     "tabula-py>=2.10.0",
 ]
 
